After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 765505 - vim: command :0 goes to last line instead of first.
vim: command :0 goes to last line instead of first.
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: editor
3.20.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-04-24 19:24 UTC by Luiz Poleto
Modified: 2016-04-24 21:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
vim: fix :0 in command bar (2.61 KB, patch)
2016-04-24 21:25 UTC, Christian Hergert
committed Details | Review

Description Luiz Poleto 2016-04-24 19:24:34 UTC
When running command ':0', the cursor goes to the last line in the file rather than the first as it is the usual behavior in both vi and vim.
Comment 1 Christian Hergert 2016-04-24 21:25:13 UTC
Created attachment 326646 [details] [review]
vim: fix :0 in command bar

0 is not a line number, and so IdeSourceViewMovements had special casing
to move this to the last line of the buffer. We do want that behavior in
other places, so special case this in the vim command parser.
Comment 2 Christian Hergert 2016-04-24 21:25:53 UTC
This problem has been fixed in the unstable development version. The fix will
be available in the next major software release. You may need to upgrade your
Linux distribution to obtain that newer version.

Attachment 326646 [details] pushed as e077bf3 - vim: fix :0 in command bar