vim: fix :0 in command bar

0 is not a line number, and so IdeSourceViewMovements had special casing
to move this to the last line of the buffer. We do want that behavior in
other places, so special case this in the vim command parser.

https://bugzilla.gnome.org/show_bug.cgi?id=765505